--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ FetchContent_Declare(SFML
         GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-
-add_executable(PawnManager ClientMain.cpp PawnManagerClient.cpp PawnManagerClient.h GameWindowManager.cpp GameWindowManager.h GameWindow.cpp GameWindow.h MainMenuWindow.cpp MainMenuWindow.h PawnRenderer.cpp PawnRenderer.h Entity.cpp Player.h Player.cpp Player.cpp)
+add_executable(PawnManager ClientMain.cpp PawnManagerClient.cpp PawnManagerClient.h GameWindowManager.cpp GameWindowManager.h GameWindow.cpp GameWindow.h MainMenuWindow.cpp MainMenuWindow.h PawnRenderer.cpp PawnRenderer.h Entity.cpp Player.h Player.cpp Player.cpp Task.cpp)
 
 
 target_link_libraries(PawnManager PRIVATE sfml-graphics)
