--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ FetchContent_Declare(SFML
         GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(PawnManager ClientMain.cpp PawnManagerClient.cpp PawnManagerClient.h GameWindowManager.cpp GameWindowManager.h GameWindow.cpp GameWindow.h MainMenuWindow.cpp MainMenuWindow.h PawnRenderer.cpp PawnRenderer.h Entity.cpp Player.h Player.cpp Player.cpp Task.cpp Building.cpp FighterPawn.cpp Pawn.cpp Recipe.cpp ResourceEntity.cpp WorkerPawn.cpp)
+add_executable(PawnManager src/ClientMain.cpp src/GUI/PawnManagerClient.cpp src/GUI/PawnManagerClient.h src/GUI/GameWindowManager.cpp src/GUI/GameWindowManager.h src/GUI/GameWindow.cpp src/GUI/GameWindow.h src/GUI/MainMenuWindow.cpp src/GUI/MainMenuWindow.h src/GUI/PawnRenderer.cpp src/GUI/PawnRenderer.h src/Entities/Entity.cpp src/Player.h src/Player.cpp src/Player.cpp src/Task.cpp src/Entities/Buildings/Building.cpp src/Entities/Pawns/FighterPawn.cpp src/Entities/Pawns/Pawn.cpp src/Recipes/Recipe.cpp src/Entities/ResourceEntity.cpp src/Entities/Pawns/WorkerPawn.cpp)
 
 
 target_link_libraries(PawnManager PRIVATE sfml-graphics)
