--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ project(PawnManager)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(PawnManager src/Entities/Entity.cpp src/Player.cpp src/Player.cpp src/Task.cpp
+add_library(PawnManager src/Entities/Entity.cpp src/Core/Player.cpp src/Core/Player.cpp src/Core/Task.cpp
         src/Entities/Buildings/Building.cpp src/Entities/Pawns/FighterPawn.cpp src/Entities/Pawns/Pawn.cpp
-        src/Recipes/Recipe.cpp src/Entities/ResourceEntity.cpp src/Entities/Pawns/WorkerPawn.cpp src/testSystem.cpp
+        src/Recipes/Recipe.cpp src/Entities/ResourceEntity.cpp src/Entities/Pawns/WorkerPawn.cpp src/Core/testSystem.cpp
         src/Entities/Buildings/CraftBuilding.cpp)
 
 target_link_libraries(PawnManager PRIVATE sfml-graphics)
