add many definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(PawnManager)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_compile_definitions(SERVER_SIDE CLIENT_SIDE)
+
 add_library(PawnManager src/Entities/Entity.cpp src/Player.cpp src/Player.cpp src/Task.cpp
         src/Entities/Buildings/Building.cpp src/Entities/Pawns/FighterPawn.cpp src/Entities/Pawns/Pawn.cpp
         src/Recipes/Recipe.cpp src/Entities/ResourceEntity.cpp src/Entities/Pawns/WorkerPawn.cpp src/testSystem.cpp
