client rewritten to use godObject instead of singleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(PawnManagerClient src/Entities/Entity.cpp src/Player.cpp src/Player.
         src/Recipes/CraftRecipe.cpp src/Recipes/BuildRecipe.cpp src/Event.cpp src/godobject.cpp src/LocalController.cpp)
 target_include_directories(PawnManagerClient PRIVATE ${Boost_SOURCE_DIR}/libs/asio/include)
 
-target_compile_definitions(PawnManagerClient PUBLIC CLIENT_SIDE SERVER_SIDE BOOST_ASIO_STANDALONE)
+target_compile_definitions(PawnManagerClient PUBLIC CLIENT_SIDE BOOST_ASIO_STANDALONE)
 
 add_subdirectory(src/GUI)
 
@@ -42,7 +42,7 @@ add_executable(PawnManagerServer src/Entities/Entity.cpp src/Player.cpp src/Play
 
 target_include_directories(PawnManagerServer PRIVATE ${Boost_SOURCE_DIR}/libs/asio/include)
 
-target_compile_definitions(PawnManagerServer PUBLIC SERVER_SIDE CLIENT_SIDE BOOST_ASIO_STANDALONE)
+target_compile_definitions(PawnManagerServer PUBLIC SERVER_SIDE BOOST_ASIO_STANDALONE)
 
 install(TARGETS PawnManagerServer)
 target_link_libraries(PawnManagerServer PRIVATE Boost::system)
