Revert "merge conf"
This reverts commit 0b0e9a55cdf4a2f69fbbdeff98ca8dcfbc40f25a, reversing
changes made to 8a27438ce4a664a223093f47e22ca5a38dc35e47.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(PawnManagerGUI BuildingRenderer.cpp CraftBuildingWindow.cpp FontM
         ClientMain.cpp Control.cpp ButtonControl.cpp SlotControl.cpp ArrowControl.cpp BuildBuildingWindow.cpp
         BuildingResultControl.cpp)
 
-target_link_libraries(PawnManagerGUI PRIVATE sfml-graphics PawnManagerClient)
+target_link_libraries(PawnManagerGUI PRIVATE sfml-graphics PawnManager)
 target_compile_features(PawnManagerGUI PRIVATE cxx_std_20)
 
 if (WIN32 AND BUILD_SHARED_LIBS)
